--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
       <artifactId>javafx-web</artifactId>
       <version>17.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.11.1</version> <!-- Use the latest version -->
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.22.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
