--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,19 @@
       <artifactId>javafx-web</artifactId>
       <version>17.0.2</version>
     </dependency>
+
+    <!-- SQLite JDBC Driver -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.34.0</version> <!-- Use the latest version available -->
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version> <!-- Use the latest version available -->
+    </dependency>
   </dependencies>
 
   <build>
